# ngram

./: .Rbuildignore  .gitignore  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  README  README.md  TODO  cleanup  redocument
R/: 00-classes.r  01-constructor.r  01-generics.r  babble.r  charsplitter.r  checks.r  concat.r  concatenate.r  count.r  extract.r  gen.r  getseed.r  getters.r  hash.r  multiread.r  ngram-package.R  ngram.r  ngram_asweka.r  phrasetable.r  preprocess.r  print.r  process.r  rcorpus.r  reactor.r  rgutenberg.r  splitter.r  string.summary.r  string_summary.r  tablesort.r  test.r  text.summary.r  utils.r  wordcount.r  wrappers.r  zzz.r
data/: example.r
demo/: 00Index  demo.r  gen.r
inst/: CITATION  shiny.r
man/: 00-ngram-package.Rd  01-ngram-class.Rd  Preprocess.Rd  aa-utils.Rd  ab-preprocess.Rd  babble.Rd  charsplitter.Rd  concat.Rd  concatenate.Rd  da-process.Rd  db-print.Rd  dc-extract.Rd  ga-babble.Rd  get.phrasetable.Rd  getseed.Rd  getters.Rd  multiread.Rd  ngram-class.Rd  ngram-package.Rd  ngram-print.Rd  ngram.Rd  phrasetable.Rd  preprocess.Rd  print.Rd  process.Rd  rcorpus.Rd  splitter.Rd  string.summary.Rd  tokenize-asweka.Rd  tokenize.Rd  wordcount.Rd
src/: Makevars  asweka.c  constructor.c  converters.c  count.c  gen.c  get_seed.c  getseed.c  hash.c  hash.h  lex.c  lex.h  main.c  ng_print.c  ngram.c  ngram.h  ngram_native.c  phrase_table.c  print.c  process.c  process.h  test.c  wordlist_to_rlist.c
src/ngram/: CMakeLists.txt  LICENSE  Makefile  TODO  a.out  example  main.c  mk  ngram
src/ngram/data/: alice.txt
src/ngram/examples/: main.c  test.c
src/ngram/src/: common_defs.h  counts.c  counts.h  gen.c  gen.h  gen_noalloc.c  gen_noalloc2.c  hash.c  hash.h  io.c  lex.c  lex.h  main.c  ngram.h  print.c  print.h  process.c  process.h  sorts.c  sorts.h  summary.c  summary.h  wordcmp.c  wordcmp.h
src/ngram/src/rand/: get_seed.c  hash.c  platform.h  rand.h  rng_interface.c  rng_interface.h  samplers.c  utils.c
src/ngram/src/rand/mrg/: rand_mrg.c  rand_mrg.h
src/ngram/src/rand/mt/: rand_mt.c  rand_mt.h
tests/: get.phrasetable.r  ngram_asweka.R  splitter.R  test.r  (+2 more)
(+36 files in other folders)
